--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     </noscript>
     <div id="app"></div>
     <div id="modal"></div>
+    <div id="modalUpdate"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
